syntax = "proto3";

package cart_items;

service CartItemsService {}